  (Robert Collins, #201613)

* ``Branch`` formats can now be loaded lazily by registering a
  ``MetaDirBranchFormatFactory`` rather than an actual format. This will
  cause the named format class to be loaded only when an enumeration of
  formats is needed or when the format string for the object is
  encountered. (Robert Collins, Jelmer Vernooij)

* The encoding that bzr uses to output things other than file content can
  now be overridden via the output_encoding configuration option.
  (Martin Pool, #340394)

* Use lazy imports in ``bzrlib/merge.py`` so that plugins like ``news_merge``
  do not cause modules to be loaded unnecessarily just because the plugin
  registers a merge hook.  This improves ``bzr rocks`` time by about 25%
  in a default installation (with just the core plugins).
  (Andrew Bennetts)

Documentation
*************

* Added ``regression`` tag to our tags list. (Robert Collins)

* Improved our release checklist to have a bit less churn and leave things
  ready-to-go for the next action (including other people doing
  development). (Robert Collins)

* Remove obsolete discussion of PQM in documentation about how to
  contribute to Bazaar.  (Martin Pool, #588444)

API Changes
***********

* ``bzrlib.branch.InterBranch._get_branch_formats_to_test`` now returns
  an iterable of format pairs, rather than just a single pair, permitting
  InterBranch objects that work with multiple permutations to be
  comprehensively tested. (Robert Collins)

* ``bzrlib.lsprof.profile`` will no longer silently generate bad threaded
  profiles when concurrent profile requests are made. Instead the profile
  requests will be serialised. Reentrant requests will now deadlock.
  (Robert Collins)

* ``bzrlib.knit.KnitSequenceMatcher``, which has been deprecated since
  2007, has been deleted.  Use ``PatienceSequenceMatcher`` from
  ``bzrlib.patiencediff`` instead. (Andrew Bennetts)

* ``bzrlib.tests.blackbox.ExternalBase`` is deprecated.  It provided only